--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service-container",
+  "name": "@draw-js/service-container",
   "description":"A Symfony2 inspired depdendency injection container for node",
   "version": "0.0.11",
   "author": {
