--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@draw-js/service-container",
   "description": "A Symfony2 inspired depdendency injection container for node",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "author": {
     "name": "Brandon Eum"
   },
@@ -27,9 +27,9 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "latest",
-    "sinon": "latest",
+    "jscoverage": "latest",
     "mocha": "latest",
-    "spears": "git://github.com/beum/spears-js.git",
-    "jscoverage": "latest"
+    "sinon": "latest",
+    "spears": "git://github.com/beum/spears-js.git"
   }
 }
