--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
   "name": "@draw-js/service-container",
-  "description": "A Symfony2 inspired depdendency injection container for node",
+  "description": "A Symfony2 inspired dedendency injection container for node",
   "version": "0.4.0",
   "author": {
-    "name": "Brandon Eum"
+    "name": "Martin Poirier Theoret"
   },
   "contributors": [],
   "repository": {
     "type": "git",
-    "url": "git://github.com/linkshare/service-container.git"
+    "url": "git://github.com/mpoiriert/service-container.git"
   },
   "main": "ServiceContainer.js",
   "directories": {
     "lib": "./lib",
     "example": "./example"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/linkshare/service-container/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "engines": {
     "node": ">=0.8.17"
   },
